Cleaned up test sets and replaced some Junit3 tests with junit4